# Advance-Autonomics-Technical-Solution

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: auth.py  claims.py  dependencies.py  users.py
app/core/: config.py  rate_limit.py  security.py
app/db/: database.py  initialization.py
app/models/: __init__.py  claim.py  user.py
app/repositories/: claims.py  users.py
app/schemas/: auth.py  claim.py  user.py
app/services/: authentication.py  claim_access.py  claims.py  users.py
docs/: INTERVIEW_CHEATSHEET.md  WALKTHROUGH.md
tests/: conftest.py  test_auth.py  test_claims.py  test_users.py
